tests/neg/param-control2.stk
param pageWidth: Int
param newLine: Bool

fun pretty(s: String): Unit =
  pageWidth p

fun g(): Unit =
  pretty "hello, word"
  h

fun h(): Unit = i

fun i(): Unit =
  g

fun main = // error
  g with pageWidth = 30
  i
